# CoreFS

./: .gitignore  CMakeLists.txt  README.md
CoreFS/: CoreFS.h
CoreFS/include/: CoreFS.h  CoreFS_Utils.h
CoreFS/src/: CoreFS.cpp  CoreFS_GNU_Linux.cpp  CoreFS_Unix.cpp  CoreFS_Win32.cpp  Macros.h
CoreFS/src/private/: CoreFS_Unix.cpp  os_functions.h  win32_functions.cpp
acow/: IO.h
acow/include/: Dir.h  File.h  IO_Utils.h  Path.h  SpecialFolder.h  Version.h
acow/src/: Dir.cpp  File.cpp  Path.cpp
acow/src/private/Dir/: gnu_linux_functions.cpp  os_functions.h  win32_functions.cpp
acow/src/private/Path/: os_functions.h  unix_functions.cpp  win32_functions.cpp
docs/: CHANGELOG.txt  Doxyfile  TODO.txt  mainpage.dox  site_info
ide/clion/: CMakeLists.txt  main.cpp
include/: CoreFS.h  CoreFS_Utils.h
include/private/: Macros.h
scripts/: dependencies.lua  update_version.sh
src/: CoreFS.cpp  CoreFS_GNU_Linux.cpp  CoreFS_Win32.cpp
